# endc-lang

./: .endcc.json  .gitignore  EndC.g4  LICENSE  README.md  compiler.spec  dev-requirements.txt  mypy.ini  notes  objectives.md  objetives.yml  onCompileEnd.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: main.yml
examples/: anonymusFunc.endc  embedasm.endc  expression.endc  greater.endc  hello_world.endc  ifelse.endc  importable.ec  importer.endc  leadingDot.endc  math.endc  template.endc  truth_machine.endc  while.endc
src/: cli.py  compiler.py  log.py  platforms.py  tokenizer.py  utils.py
src/ast_/: __init__.py  __main__.py  astPrinter.py  expr.py  genAst.py  parser.py
src/backend/: __init__.py
src/backend/interpreter/: README.md  __init__.py  __main__.py  errorHandler.py  interactive.py
src/backend/llvm/: __init__.py
src/backend/python/: __init__.py
src/backend/wasm/: __init__.py
src/token_/: __init__.py  tokenizer.py
test/: test.py
