[tool.poetry]
name = "endc-lang"
version = "0.1.0"
description = ""
authors = ["ENDERZOMBI102 <enderzombi102.end@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.10"
llvmlite = "^0.38.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pyinstaller = "^4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
